--- a/home/index.html
+++ b/home/index.html
@@ -290,6 +290,14 @@ window.addEventListener('wheel', function(event) {
     }
 }, { passive: false });
 
+document.addEventListener('contextmenu', event => event.preventDefault());
+document.onkeydown = function(e) {
+    if(e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === "I")) {
+        return false;
+    }
+};
+
+
 		</script>
 		
         
