--- a/Gallery/intro.html
+++ b/Gallery/intro.html
@@ -1,5 +1,6 @@
 <head>
 	<title>loading...</title>
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
 </head>
 
 <div class="container">
