--- a/Gallery/loading.html
+++ b/Gallery/loading.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loading...</title>
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/png" href="../assets/wm.png">
 </head>
