--- a/bash/index.html
+++ b/bash/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>>_</title>
     <meta charset="UTF-8">
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
     <link href="./assets/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap">
     <link rel="stylesheet" href="./css/style.css">
