--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="rgb(242 242 242)">
@@ -43,15 +49,20 @@
 		}
     </script>
 
-    <section class="home">
+    <!-- <section class="home">
         <div>
             <h1></h1><span class="second-title">wmbolles.com</span>
             <p>Welcome<span>enjoy !</span></p>
         </div>
-    </section>
+    </section> -->
     
     <script src="assets/app.js"></script>
 </body>
+<style>
+	body{
+		background-color: black;
+	}
+</style>
 <script type="text/javascript">
 
 
@@ -60,9 +71,7 @@
 	}
 	setTimeout(openPage2, 2200);
 
-
-
-	document.addEventListener('contextmenu', event => event.preventDefault());
+document.addEventListener('contextmenu', event => event.preventDefault());
 document.onkeydown = function(e) {
     if(e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === "I")) {
         return false;
