--- a/go/index.html
+++ b/go/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>~/go</title>
     <link rel="stylesheet" href="./style.css">
