--- a/home/index.html
+++ b/home/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
+		<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta property="og:title" content="Wassim Bolles">
