--- a/bash/index.html
+++ b/bash/index.html
@@ -23,12 +23,12 @@
 	<div class="meny">
 		<h2>Go Back !</h2>
 		<ul>
-			<li><a href="../home/">Home</a></li>
-			<li><a href="../Gallery/">Gallery</a></li>
-			<li><a href="../news/">News</a></li>
-			<li><a href="../game/">game</a></li>
-			<li><a href="../go/">go</a></li>
-			<li><a href="../404">404</a></li>
+			<li><a style="text-decoration: none; color: aliceblue;" href="../home/">Home</a></li>
+			<li><a style="text-decoration: none; color: aliceblue;" href="../news/">News</a></li>
+			<li><a style="text-decoration: none; color: aliceblue;" href="../Gallery/">Gallery</a></li>
+			<!-- <li><a href="../game/">game</a></li> -->
+			<!-- <li><a href="../go/">go</a></li> -->
+			<!-- <li><a href="../404">404</a></li> -->
 		</ul>
 		<a style="position: absolute; top: 95vh; left: 2vh;" href="https://profile.intra.42.fr/users/wabolles" class="nav__link"><img src="https://profile.intra.42.fr/assets/42_logo-7dfc9110a5319a308863b96bda33cea995046d1731cebb735e41b16255106c12.svg" style="width: 4vh; height: 4vh;" alt=""></a>
 	</div>
