um9p logo + stackoverflow profile link

--- a/home/index.html
+++ b/home/index.html
@@ -59,7 +59,6 @@
             <section class="home" id="home">
                 <div class="home__container bd-grid">
                     <h1 class="home__title"><span>Th</span><br>eF/<span style="font-size: xx-small;  font-family: 'Roboto Mono', monospace;">Free Palestine !</span></h1>
-
                     <div class="home__scroll">
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
                     </div>
@@ -74,17 +73,17 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="./assets/img/d.jpeg" alt="">
+						<img src="./assets/img/d.jpeg" alt="">
                     </div>
-
+					
                     <div>
-                        <h2 class="about__subtitle">I'm Bolles Wassim<span style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+						<h2 class="about__subtitle">I'm Bolles Wassim<span style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 						color: gray; font-size: small; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Aka TheF</span></h2>
                         <span class="about__profession">Student At<a style="color: rgb(4, 4, 198);;" href="https://www.42network.org/"> 42 Network school</a></span>
                         <p class="about__text">I'm an IT architect student at <a style="color:rgb(4, 4, 198);" href="https://1337.ma/">1337</a> and a web developer passionate about low-level programming and cybersecurity<br>physics enthusiast<br>inventor and investor</p>
 
                         <div class="about__social">
-                            <a href="https://ma.linkedin.com/in/wassim-bolles-60a47523a" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
+							<a href="https://ma.linkedin.com/in/wassim-bolles-60a47523a" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
                             <a href="https://github.com/wmbolles" class="about__social-icon"><i class='bx bxl-github' ></i></a>
                             <a href="https://x.com/wassimbolles01" class="about__social-icon"><i class='bx bxl-twitter' ></i></a>
                             <a href="https://www.instagram.com/wassim_bolles/" class="about__social-icon"><i class='bx bxl-instagram' ></i></a>
@@ -94,6 +93,7 @@
                             <a href="https://wa.me/212625218307" class="about__social-icon"><i class='bx bxl-whatsapp' ></i></a>
                             <a href="https://open.spotify.com/user/31w6uxdyuwrgxunn5wgpj3dpr6fy?si=ERXKHXa7TZOaTX7Hkmxthw" class="about__social-icon"><i class='bx bxl-spotify' ></i></a>
                             <a href="https://t.me/wmbolles" class="about__social-icon"><i class='bx bxl-telegram' ></i></a>
+							<a class="about__social-icon" href="https://stackoverflow.com/users/27709476/thef" ><i class='bx bxl-stackoverflow' ><img src="https://stackoverflow.design/assets/img/logos/so/logo-stackoverflow.svg" style="width: 10vh; margin-top: 0.8vh;" alt=""></i></a>
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,9 @@
 					<div style=" display:inline-flex">
 					<svg width="86" height="20" viewBox="0 0 76 20" fill="none"><path d="M2.8333 17.6623H5.92418V2.33766H2.31816V5.45455H0V1.49012e-07H8.75748V17.6623H11.8484V20H2.8333V17.6623Z" fill="white"></path><path d="M21.3785 17.6623H30.6512V10.9091H22.1513V8.57143H30.6512V2.33766H21.3785V0H33.4845V20H21.3785V17.6623Z" fill="white"></path><path d="M42.2419 17.6623H51.5146V10.9091H43.0147V8.57143H51.5146V2.33766H42.2419V0H54.3479V20H42.2419V17.6623Z" fill="white"></path><path d="M72.6355 2.33766H64.9084V7.27273H62.5902V0H75.2113V20H72.6355V2.33766Z" fill="white"></path></svg>
 					<a href="https://profile.intra.42.fr/users/wabolles" class="nav__link"><img src="https://profile.intra.42.fr/assets/42_logo-7dfc9110a5319a308863b96bda33cea995046d1731cebb735e41b16255106c12.svg" style="  width: 3vh; height: 4vh; position: relative; bottom: 0.98vh; left: 1vh;" alt=""></a>
-					</div>
+					<br>
+				</div>
+				<img  style="margin-top: -2vh;width: 20vh;  position: relative;left: -0.68vh;" src="https://um6p.ma/sites/default/files/logo-wwhite.png" alt="">
                 </div>
 
                 <div class="footer__data">
@@ -270,6 +272,8 @@
 					<a href="https://wa.me/212625218307" class="about__social-icon"><i class='bx bxl-whatsapp' ></i></a>
 					<a href="https://open.spotify.com/user/31w6uxdyuwrgxunn5wgpj3dpr6fy?si=ERXKHXa7TZOaTX7Hkmxthw" class="about__social-icon"><i class='bx bxl-spotify' ></i></a>
 					<a href="https://t.me/wmbolles" class="about__social-icon"><i class='bx bxl-telegram' ></i></a>
+					<!-- <br> -->
+					<a href="https://stackoverflow.com/users/27709476/thef" class="about__social-icon"><i class='bx bxl-stackoverflow' ><img src="https://stackoverflow.design/assets/img/logos/so/logo-stackoverflow.svg" style="width: 10vh;" alt=""></i></a>
                 </div>
 
 
