--- a/go/index.html
+++ b/go/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="description" content="Bolles Wassim, an IT architect student at 1337 School. Web developer passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
+	<meta name="keywords" content="Bolles Wassim, IT architect, web developer, cybersecurity, low-level programming, inventor, 42 Network student, 1337 school">
+	<meta name="author" content="Wassim Bolles">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://wmbolles.com/">
+	<meta property="og:title" content="Bolles Wassim TheF - IT Architect & Web Developer">	
+	<meta property="og:description" content="Student at 42 Network, passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
+	<meta property="og:url" content="https://wmbolles.com/">
+	<meta property="og:image" content="https://wmbolles.com/home/assets/img/wm.png">
+
     <meta charset="UTF-8">
 	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,3 +79,20 @@
     </script>
 </body>
 </html>
+
+<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "Person",
+	  "name": "Bolles Wassim",
+	  "jobTitle": "IT Architect & Web Developer",
+	  "alumniOf": "1337 School",
+	  "sameAs": [
+		"https://wmbolles.com",
+		"https://ma.linkedin.com/in/wassim-bolles-60a47523a",
+		"https://github.com/wmbolles"
+	  ],
+	  "description": "Student at 42 Network, passionate about low-level programming, cybersecurity, physics. Inventor and investor."
+	}
+	</script>
+	
