--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
-	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
-	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
-	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
-	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
+		<meta name="description" content="Bolles Wassim, an IT architect student at 1337 School. Web developer passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
+		<meta name="keywords" content="Bolles Wassim, IT architect, web developer, cybersecurity, low-level programming, inventor, 42 Network student, 1337 school">
+		<meta name="author" content="Wassim Bolles">
+		<meta name="robots" content="index, follow">
+		<link rel="canonical" href="https://wmbolles.com/">
+		<meta property="og:title" content="Bolles Wassim TheF - IT Architect & Web Developer">	
+		<meta property="og:description" content="Student at 42 Network, passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
+		<meta property="og:url" content="https://wmbolles.com/">
+		<meta property="og:image" content="https://wmbolles.com/home/assets/img/wm.png">
+
+	<!-- <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles"> -->
+	<!-- <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles"> -->
+	<!-- <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles"> -->
+	<!-- <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles"> -->
+	<!-- <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles"> -->
 	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +28,7 @@
     <meta property="og:title" content="Wassim Bolles">
     <meta property="og:title" content="WAASSIM BOLLES">
     <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
-    <meta property="og:description" content="Wassim bolles profile">
+    <meta property="og:description" content="Wassim bolles">
     <meta property="og:image" content="https://scontent.fcmn1-3.fna.fbcdn.net/v/t39.30808-6/408049471_1781674012272313_6071001480103352144_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=2nj74q6IjuEQ7kNvgGFFNfp&_nc_ht=scontent.fcmn1-3.fna&oh=00_AfA76Biw6_I5JiLTor5VOJlLGAKw3-1afp95BdolEAkSfA&oe=6630B1AF">
     <meta property="og:url" content="https://example.com">
     <meta property="og:type" content="wmbolles.com">
@@ -109,4 +119,21 @@ document.onkeydown = function(e) {
 
 
 </script>
+
+<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "Person",
+	  "name": "Bolles Wassim",
+	  "jobTitle": "IT Architect & Web Developer",
+	  "alumniOf": "1337 School",
+	  "sameAs": [
+		"https://wmbolles.com",
+		"https://ma.linkedin.com/in/wassim-bolles-60a47523a",
+		"https://github.com/wmbolles"
+	  ],
+	  "description": "Student at 42 Network, passionate about low-level programming, cybersecurity, physics. Inventor and investor."
+	}
+	</script>
+	
 </html>
