--- a/Gallery/intro.html
+++ b/Gallery/intro.html
@@ -1,6 +1,16 @@
 <head>
 	<title>loading...</title>
 	<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
+	<meta name="description" content="Bolles Wassim, an IT architect student at 1337 School. Web developer passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
+	<meta name="keywords" content="Bolles Wassim, IT architect, web developer, cybersecurity, low-level programming, inventor, 42 Network student, 1337 school">
+	<meta name="author" content="Wassim Bolles">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://wmbolles.com/">
+	<meta property="og:title" content="Bolles Wassim TheF - IT Architect & Web Developer">	
+	<meta property="og:description" content="Student at 42 Network, passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
+	<meta property="og:url" content="https://wmbolles.com/">
+	<meta property="og:image" content="https://wmbolles.com/home/assets/img/wm.png">
+
 </head>
 
 <div class="container">
