news & ui ux updates

--- a/home/index.html
+++ b/home/index.html
@@ -34,7 +34,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="./index.html" class="nav__logo">Wassim Bolles</a>
+                    <a href="./index.html" class="nav__logo">wmBolles</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="skills__img">
-                        <img src="assets/img/img42.png" style="height: 55vh; width: 32vh; position: relative; left: 10vh;" alt="">
+                        <img src="assets/img/thef.jpeg" style="height: 50vh; width: 42vh; position: relative; left: 10vh;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" alt="">
                     </div>
                 </div>
             </section>
@@ -265,7 +265,7 @@
 						<li><a href="../game/" class="footer__link">game</a></li>
                         <li><a href="../news/intro" class="footer__link">News</a></li>
                         <li><a href="../bash/" class="footer__link">Bash</a></li>
-                        <li><a href="../go/" class="footer__link">go</a></li>
+                        <!-- <li><a href="../go/" class="footer__link">go</a></li> -->
                         <!-- <li><a href="../wallet/" class="footer__link">wallet</a></li> -->
                     </ul>
                 </div>
