--- a/home/index.html
+++ b/home/index.html
@@ -45,7 +45,7 @@
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#portfolio" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="../Gallery/intro" class="nav__link">Gallery</a></li>
-                        <li class="nav__item"><a href="../news/intro" class="nav__link">News</a></li>						
+                        <li class="nav__item"><a href="../news/" class="nav__link">News</a></li>						
 						<li title="Free Palestine"   class="nav__item"><img src="assets/img/flag.jpg" width="45px" alt="Free Palestine"></li>
                     </ul>
                 </div>
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="skills__img">
-                        <img src="assets/img/thef.jpeg" style="height: 50vh; width: 42vh; position: relative; left: 10vh;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" alt="">
+                        <img src="assets/img/thef.jpeg" style="  position: relative; left: 10vh;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" alt="">
                     </div>
                 </div>
             </section>
