--- a/home/index.html
+++ b/home/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:title" content="Bolles Wassim TheF - IT Architect & Web Developer">	
 		<meta property="og:description" content="Student at 42 Network, passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
 		<meta property="og:url" content="https://wmbolles.com/">
-		<meta property="og:image" content="https://wmbolles.com/home/assets/img/wm.png">
+		<meta property="og:image" content="https://wmbolles.com/home/assets/img2/.png">
 
 		<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
         <meta charset="UTF-8">
@@ -219,7 +219,7 @@
                         <span class="contact__text">+212 625-218307</span>
 
                         <h3 class="contact__subtitle">ADDRESS</h3>
-                        <span class="contact__text">Khouribga</span>
+                        <span class="contact__text">1337 Mall Center Khouribga</span>
                     </div>
 
                     <form action="" class="contact__form">
