no_need_to_set_a_commit

--- a/home/index.html
+++ b/home/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:title" content="Bolles Wassim TheF - IT Architect & Web Developer">	
 		<meta property="og:description" content="Student at 42 Network, passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
 		<meta property="og:url" content="https://wmbolles.com/">
-		<meta property="og:image" content="https://wmbolles.com/home/assets/img2/.png">
+		<meta property="og:image" content="https://wmbolles.com/home/assets/img2.png">
 
 		<meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
         <meta charset="UTF-8">
