--- a/mza7a/index.html
+++ b/mza7a/index.html
@@ -9,6 +9,11 @@
     <h1>heeey....</h1>
     <h2>If you need to protect yourself, create another one with other ideas, another person! Be stupid, useless, such as this quote;)</h2><br>
     <h2>i love you hatim, but i can't cuz i love 1337 more...</h2>
-    <img src="./img.jpg" alt="">
+    <img style="width: 40vh;" src="./img.jpg" alt="">
 </body>
+<style>
+    body{
+        background:linear-gradient(45deg, black, gray);
+    }
+</style>
 </html>
