--- a/mza7a/index.html
+++ b/mza7a/index.html
@@ -6,7 +6,7 @@
     <title>heyyy....</title>
 </head>
 <body>
-    <h1>heeey....</h1>
+    <h1 >heeey....</h1>
     <h2>If you need to protect yourself, create another one with other ideas, another person! Be stupid, useless, such as this quote;)</h2><br>
     <h2>i love you hatim, but i can't cuz i love 1337 more...</h2>
     <img style="width: 40vh;" src="./img.jpg" alt="">
@@ -14,6 +14,15 @@
 <style>
     body{
         background:linear-gradient(45deg, black, gray);
+        background-size:cover;
+        background-repeat: no-repeat;
     }
+    h1{
+        color: white;
+    }
+    h2{
+        color: white;
+    }
+    
 </style>
 </html>
