Mobile Version responsiveness update

--- a/home/index.html
+++ b/home/index.html
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="skills__img">
-                        <img src="assets/img/thef.jpeg" style="  position: relative; left: 10vh;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" alt="">
+                        <img src="assets/img/thef.jpeg" style="  left: 10vh;box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);" alt="">
                     </div>
                 </div>
             </section>
