--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -89,7 +89,7 @@
     </nav>
   </header>
   <div class="container mx-auto">
-    <h1 class="text-4xl pt-10 pb-8 font-bold">Gallery</h1>
+    <h1 class="text-4xl pt-10 pb-8 font-bold">Gallery <span style="font-size: small; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"> memories</span></h1>
     <section class="text-neutral-700">
       <div class="container w-full">
         <div class="flex flex-wrap w-full">
