--- a/home/index.html
+++ b/home/index.html
@@ -228,7 +228,7 @@
                             <input type="mail" placeholder="Email" class="contact__input">
                         </div>
 
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <textarea name="" id="" cols="0" rows="10" placeholder="Don't forget to copy this text in case the redirection fails." class="contact__input"></textarea>
 
                         <div><a href="https://t.me/wmbolles"><input  value="Send" class="contact__button"></a></div>
                     </form>
