update in Home path

--- a/404.html
+++ b/404.html
@@ -9,9 +9,10 @@
 	<meta property="og:title" content="Bolles Wassim TheF - IT Architect & Web Developer">	
 	<meta property="og:description" content="Student at 42 Network, passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
 	<meta property="og:url" content="https://wmbolles.com/">
+	<link rel="icon" type="image/x-icon" href="./assets/logo/wm.png">
 	<meta property="og:image" content="https://wmbolles.com/home/assets/img/wm.png">
 
-	<title>404 - Page Not Found | Bolles Wassim TheF</title>
+	<!-- <title>404 - Page Not Found | Bolles Wassim TheF</title> -->
 <meta name="description" content="This page does not exist on Bolles Wassim's website.">
 
     <link rel="icon" type="image/x-icon" href="assets/wm.png">
@@ -29,7 +30,7 @@
       gtag("config", "G-1752YPLP7H");
     </script>
 
-    <title>~/404</title>
+    <title>Page Not Found</title>
     <link type="text/css" rel="stylesheet" href="css/404.css" />
     <link rel="icon" type="image/x-icon" href="../images/tsParticles-64.png" />
   </head>
