--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -15,7 +15,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>~/Gallery</title>
+  <title>Gallery</title>
   <meta name="description" content="WASSIM BOLLES wassim bolles wmbolles">
   <meta name="description"
     content="Hey i'm Wassim Bolles, Full stack Developer & Student at 42 network school | 1337 Future is loading">
