--- a/home/index.html
+++ b/home/index.html
@@ -41,9 +41,9 @@
                     <ul class="nav__list">
 						<li class="nav__item"><a href="https://profile.intra.42.fr/users/wabolles" class="nav__link"><img src="https://profile.intra.42.fr/assets/42_logo-7dfc9110a5319a308863b96bda33cea995046d1731cebb735e41b16255106c12.svg" style="width: 4vh; height: 2.5vh;" alt=""></a></li>
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
-                        <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#portfolio" class="nav__link">Projects</a></li>
+                        <!-- <li class="nav__item"><a href="#about" class="nav__link">About</a></li> -->
+                        <!-- <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li> -->
+                        <!-- <li class="nav__item"><a href="#portfolio" class="nav__link">Projects</a></li> -->
                         <li class="nav__item"><a href="../Gallery/intro" class="nav__link">Gallery</a></li>
                         <li class="nav__item"><a href="../news/" class="nav__link">News</a></li>						
 						<li title="Free Palestine"   class="nav__item"><img src="assets/img/flag.jpg" width="45px" alt="Free Palestine"></li>
