--- a/Gallery/index.html
+++ b/Gallery/index.html
@@ -10,6 +10,7 @@
 	<meta property="og:title" content="Bolles Wassim TheF - IT Architect & Web Developer">	
 	<meta property="og:description" content="Student at 42 Network, passionate about low-level programming, cybersecurity, physics, and an inventor and investor.">
 	<meta property="og:url" content="https://wmbolles.com/">
+	<link rel="icon" type="image/x-icon" href="../assets/logo/wm.png">
 	<meta property="og:image" content="https://wmbolles.com/home/assets/img/wm.png">
 
   <meta charset="UTF-8" />
