--- a/home/index.html
+++ b/home/index.html
@@ -78,7 +78,7 @@
             </section>
             
             <!--===== ABOUT =====-->
-            <section class="about section" style="background: linear-gradient(#fff,#71c4ef); transform: rotate(0deg);  border-top-left-radius: 10vh; border-top-right-radius: 10vh;" id="about">
+            <section class="about section" style="background: linear-gradient(#fff,#71c4ef); transform: rotate(0deg);  border-top-left-radius: 10vh; border-top-right-radius: 10vh;" >
                 <h2 class="section-title">About</h2>
 
                 <div class="about__container bd-grid">
@@ -111,7 +111,7 @@
             </section>
 
 			<!--===== SKILLS =====-->
-            <section class="skills section" style="background: linear-gradient(#71c4ef, #00668c, black);  transform: rotate(0deg);  border-bottom-right-radius: 10vh;" id="skills">
+            <section class="skills section" style="background: linear-gradient(#71c4ef, #00668c, black);  transform: rotate(0deg);  border-bottom-right-radius: 10vh;" >
                 <h2 class="section-title" style="color: rgba(255, 255, 255, 0.928);">Skills</h2>
 
                 <div class="skills__container bd-grid">
@@ -143,7 +143,7 @@
             </section>
 
             <!--===== PORTFOLIO =====-->
-            <section class="portfolio section" style="color: aliceblue;" id="portfolio" >
+            <section class="portfolio section" style="color: aliceblue;"  >
                 <h2 class="section-title-dark" style="color: aliceblue;">Projects</h2>
 
                 <div  class="portfolio__container bd-grid">
@@ -219,7 +219,7 @@
 
 			
             <!--===== CONTACT =====-->
-            <section class="contact section" style="background: linear-gradient(0deg, rgb(255, 254, 254),#71c4ef) ;  border-bottom-left-radius: 10vh; border-bottom-right-radius: 10vh;" id="contact">
+            <section class="contact section" style="background: linear-gradient(0deg, rgb(255, 254, 254),#71c4ef) ;  border-bottom-left-radius: 10vh; border-bottom-right-radius: 10vh;" >
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
